--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "backbone": "~1.0.0",
     "requirejs": "~2.1.5",
     "requirejs-text": "~2.0.5",
-    "modernizr": "~2.6.2"
+    "modernizr": "~2.6.2",
+    "require-handlebars-plugin": "~0.4.0"
   },
   "devDependencies": {}
 }
