--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "grunt-open": "~0.2.0",
     "matchdep": "~0.1.2",
     "connect-livereload": "~0.2.0",
-    "time-grunt": "~0.1.1"
+    "time-grunt": "~0.1.1",
+    "seoserver": "~1.1.6"
   },
   "engines": {
     "node": ">=0.8.0"
