--- a/dev/.htaccess
+++ b/dev/.htaccess
@@ -558,6 +558,7 @@ AddCharset utf-8 .atom .css .js .json .rss .vtt .xml
 
     RewriteCond %{HTTP_USER_AGENT} Googlebot [OR]
     RewriteCond %{HTTP_USER_AGENT} AdsBot-Google [OR]
+    RewriteCond %{HTTP_USER_AGENT} bingbot [OR]
     RewriteCond %{HTTP_USER_AGENT} msnbot [OR]
     RewriteCond %{HTTP_USER_AGENT} AltaVista [OR]
     RewriteCond %{HTTP_USER_AGENT} Slurp [OR]
