--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "requirejs": "~2.1.5",
     "requirejs-text": "~2.0.5",
     "modernizr": "~2.6.2",
-    "require-handlebars-plugin": "~0.4.0"
+    "require-handlebars-plugin": "~0.4.0",
+    "backbone.localStorage": "~1.1.6"
   },
   "devDependencies": {}
 }
