--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "modernizr": "~2.6.2",
     "require-handlebars-plugin": "~0.4.0",
     "backbone.localStorage": "~1.1.6",
-    "jquery-ui": "~1.10.3"
+    "jquery-ui": "~1.10.3",
+    "momentjs": "~2.2.1"
   },
   "devDependencies": {}
 }
