add phantomjs cache

--- a/dev/.htaccess
+++ b/dev/.htaccess
@@ -557,6 +557,7 @@ AddCharset utf-8 .atom .css .js .json .rss .vtt .xml
     RewriteEngine On
 
     RewriteCond %{HTTP_USER_AGENT} Googlebot [OR]
+    RewriteCond %{HTTP_USER_AGENT} YandexBot [OR]
     RewriteCond %{HTTP_USER_AGENT} AdsBot-Google [OR]
     RewriteCond %{HTTP_USER_AGENT} bingbot [OR]
     RewriteCond %{HTTP_USER_AGENT} msnbot [OR]
@@ -565,7 +566,7 @@ AddCharset utf-8 .atom .css .js .json .rss .vtt .xml
     RewriteCond %{HTTP_USER_AGENT} AhrefsBot [OR]
     RewriteCond %{HTTP_USER_AGENT} Teoma
     RewriteCond %{HTTP_USER_AGENT} !Phantom
-    RewriteRule (.*) seoserver.php [L]
+    RewriteRule (.*) phantom [L]
 
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
